Изменено значение AleriId с INT на INT64. Дописан swagger. Добавлены заголовки CORS. Привязаны хендлеры алертов к usecase
